# django-iconx

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/getting-started/icon-packages/: index.html
0.1.0/getting-started/installation/: index.html
0.1.0/reference/changelog/: index.html
0.1.0/reference/configuration/: index.html
0.1.0a1/: 404.html  index.html  sitemap.xml
0.1.0a1/getting-started/installation/: index.html
0.1.0a1/reference/changelog/: index.html
0.1.0a1/search/: search_index.json
0.1.0a2/: 404.html  index.html  sitemap.xml
0.1.0a2/getting-started/icon-packages/: index.html
0.1.0a2/getting-started/installation/: index.html
0.1.0a2/reference/changelog/: index.html
0.1.0a3/: 404.html  index.html  sitemap.xml
0.1.0a3/getting-started/icon-packages/: index.html
0.1.0a3/getting-started/installation/: index.html
0.1.0a3/reference/changelog/: index.html
0.1.0a3/reference/configuration/: index.html
0.1.0a3/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/getting-started/icon-packages/: index.html
0.2.0/getting-started/installation/: index.html
0.2.0/reference/changelog/: index.html
0.2.0/reference/configuration/: index.html
0.2.0/search/: search_index.json
django_iconx/: __init__.py  apps.py  conf.py  css.py  download.py  registry.py  svg.py
django_iconx/management/commands/: iconx.py  iconx_generate.py
django_iconx/templatetags/: iconx.py
docs/: index.md
docs/getting-started/: icon-packages.md  installation.md
docs/reference/: changelog.md  configuration.md
examples/lucide/: demo-screenshot.html  package-lock.json  package.json  settings.py  urls.py  views.py
examples/lucide/templates/: gallery.html
main/: 404.html  index.html  sitemap.xml
main/getting-started/icon-packages/: index.html
main/getting-started/installation/: index.html
main/reference/changelog/: index.html
main/reference/configuration/: index.html
main/search/: search_index.json
tests/: conftest.py  test_conf.py  test_css.py  test_download.py  test_management.py  test_svg.py  test_templatetags.py
tests/settings/: base.py
