[project]
name = "django-iconx"
version = "0.2.0"
description = "CSS-only icon system for Django"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["django", "icons", "css"]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = ["Django>=5.2,<7"]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-iconx"
Documentation = "https://oliverhaas.github.io/django-iconx/"
Repository = "https://github.com/oliverhaas/django-iconx.git"
Changelog = "https://oliverhaas.github.io/django-iconx/reference/changelog/"

[dependency-groups]
dev = [
  "pre-commit==4.5.1",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-xdist==3.8.0",
  "ruff==0.15.10",
  "mypy==1.20.0",
  "django-stubs==6.0.2",
  "pytest-django==4.12.0",
]
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.6", "mike==2.1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_iconx"]

[tool.hatch.build.targets.sdist]
include = ["django_iconx", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "E501", "EM", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",
  "ARG",
  "F841",
  "FBT",
  "PT006",
  "PT011",
  "PT013",
  "PT018",
  "PLR2004",
  "S101",
  "S105",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "tests.settings.base"

[tool.pytest.ini_options]
addopts = "--cov=django_iconx --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
testpaths = ["tests"]
xfail_strict = true
DJANGO_SETTINGS_MODULE = "settings.base"
pythonpath = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
skip_covered = true
